# tostools

./: .gitignore  .interrogate-tos-attribute-dates-audit.md  .interrogate-tos-audit-missing-attributes.md  .pre-commit-config.yaml  2  ARCHITECTURE_DECISIONS.md  BRANCH_STRATEGY.md  CHANGELOG.md  CLAUDE.md  DATA_QUALITY_SYSTEM.md  DATETIME_PARSING_TODO.md  FILE.txt  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS_TRACKER.md  REVISION_NOTES.md  TESTING_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  attribute_codes.yaml
data/audit_suppressions/: attribute_dates.txt
data/reference/: sitelog_instr.txt
data/rinex_samples/: RHOF0790.02D  proper.rnx  proper.rnx.backup  test.rnx
data/sitelogs_archive/: RHOF_test_sitelog.txt  reference_sitelog.txt
data/sitelogs_archive/eight_station_smoke/: DYNC_PrintTOS.diff  GRVA_PrintTOS.diff  GRVA_sitelog.diff  REPORT.md  SJUK_PrintTOS.diff  SJUK_sitelog.diff
data/sitelogs_archive/new_synthesis/: AKUR_legacy.json  AKUR_legacy_table.txt  AKUR_legacy_windows.txt  AKUR_new.json  AKUR_new_table.txt  AKUR_new_windows.txt  AKUR_table.colordiff  AKUR_windows.diff  AUST_legacy.json  AUST_legacy_table.txt  AUST_legacy_windows.txt  AUST_new.json  AUST_new_table.txt  AUST_new_windows.txt  AUST_table.colordiff  AUST_windows.diff  HOFN_legacy.json  HOFN_legacy_table.txt  HOFN_legacy_windows.txt  HOFN_new.json  HOFN_new_table.txt  HOFN_new_windows.txt  HOFN_table.colordiff  HOFN_windows.diff  REVIEW.md  REYK_legacy.json  REYK_legacy_table.txt  REYK_legacy_windows.txt  REYK_new.json  REYK_new_table.txt  REYK_new_windows.txt  REYK_table.colordiff  REYK_windows.diff
data/station_config/: LMI_stat.info  RHOF00ISL  antenna.gra  antenna_arp.list  fiho_domes_informations.txt  iers_sta_list.txt  station-plate-tmp  station.info.sopac.apr05  stations.list  visit.list
data/test_outputs/: grep  latest_converstion_20508231020.txt  test2.txt  test_report.txt  tmp.txt  tmp_duplicate.txt  tmp_file.txt  tosGPS
data/triage/: contact_dates_fleet_20260604.txt  contact_microrecords_delete_20260607.txt
data/triage/hauc/: hauc_audit_20260521.txt
data/triage/hedi/: hedi_5107_dates_dedupe_20260526.txt  hedi_audit_20260526.txt  hedi_contact_5018_backdate_20260531.txt  hedi_date_start_continuity_20260526.txt
data/triage/hofn/: hofn_audit_20260528.txt
data/triage/olke/: olke_decommission_4979_20260620.txt  olke_firmware_transition.py  olke_receiver_history_reconstruction_20260620.txt
data/triage/savi/: savi_audit_20260526.txt
docs/: sync-config.yaml.example
docs/architecture/: contact-write-api.md  dup-device-merge-scoping.md  network-data-extraction.md  shared-power-model.md  station-location-add.md  synthesis-legacy-divergence.md  tos-write-api.md
docs/standards/: README.md  STANDARDS_INDEX.md  WORKFLOW_INTEGRATION.md
docs/standards/gamit/: README.md
docs/standards/igs/: README.md
docs/standards/local_copies/: domes.req  sitelog_instr_v2.0.txt
docs/standards/rinex/: README.md
docs/tutorials/: station-triage-tutorial.md
reference_data/: station.info.sopac.apr05
scripts/: capture_oracle.py  compare_synthesis.py  export_station_equipment.py  generate_reference_data.py  harvest_attribute_codes.py  update_standards.py  validate_modular_system.py
sitelogs/RHOF00ISL/: RHOF00ISL
src/tostools/: antenna_timeline.py  archive.py  audit.py  audit_arbitrate.py  audit_attribute_dates.py  audit_constellations.py  audit_contact_dates.py  audit_duplicate_serials.py  audit_firmware_chain.py  audit_fleet_sweep.py  audit_missing_attributes.py  audit_rinex_timeline.py  audit_verify_from_rinex.py  audit_visit_coverage.py  constellation.py  constellation_history.py  device.py  device_find.py  devices.py  fleet_ops.py  gps_metadata_functions.py  gps_metadata_qc.py  gps_rinex.py  history.py  location.py  metadata_functions.py  owners.py  power.py  receiver_timeline.py  station.py  station_triage.py  tos.py  tosGPS.py  xmltools.py
src/tostools/api/: __init__.py  _http.py  tos_client.py  tos_writer.py
src/tostools/cli/: main.py
src/tostools/core/: site_log.py  station.py
src/tostools/io/: file_utils.py  rich_formatters.py
src/tostools/legacy/: gps_metadata_functions.py  gps_metadata_qc.py  gps_rinex.py
src/tostools/rinex/: __init__.py  corrector.py  domes.py  formatter.py  reader.py  validator.py
src/tostools/standards/: __init__.py  gamit_station_info.py  igs_equipment.py
src/tostools/utils/: archive.py  data_quality.py  logging.py
tests/: __init__.py  _canonicalize.py  conftest.py  test_antenna_timeline.py  test_apply.py  test_archive.py  test_archive_utils.py  test_audit.py  test_audit_arbitrate.py  test_audit_attribute_dates.py  test_audit_contact_dates.py  test_audit_duplicate_serials.py  test_audit_firmware_chain.py  test_audit_fleet_sweep.py  test_audit_missing_attributes.py  test_audit_rinex_timeline.py  test_audit_verify_from_rinex.py  test_audit_visit_coverage.py  test_build_history_from_connections.py  test_composer_oracle.py  test_constellation.py  test_constellation_history.py  test_contact.py  test_corrector_domes.py  test_corrector_header_boundary.py  test_corrector_tos_cache.py  test_corrector_z_format.py  test_device.py  test_device_attribute_history_none_date.py  test_device_delete.py  test_device_find.py  test_device_merge.py  test_devices.py  test_fleet_ops.py  test_gamit_station_info.py  test_history.py  test_http_url.py  test_igs_equipment.py  test_location_add.py  test_owners.py  (+19 more)
tests/_oracle_outputs/: AUST_new.json  RHOF_legacy.json
tests/cassettes/test_composer_oracle/: test_aust_station_sessions_locked.yaml  test_rhof_gps_metadata_via_devices_matches_legacy_snapshot.yaml  test_rhof_legacy_synthesis_matches_snapshot.yaml  test_rhof_station_sessions_matches_legacy_device_history.yaml
tests/fixtures/: README.md
