[project]
name = "tostools"
version = "0.3.0"
authors = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
    { name = "Tryggvi Hjörvar" },
]
description = "Python toolkit for GPS/GNSS station management and TOS API integration"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "gtimes>=0.3.3",
    "python-dateutil>=2.9.0",
    "argparse-logging>=2020.11.26",
    "fortranformat>=2.0.0",
    "unlzw3>=0.2.1",
    "pyproj>=3.4.0",
    "numpy>=1.24.0",
    "colorama>=0.4.6",
    "pika>=1.3.0",
    "PyYAML>=6.0",
]

[project.scripts]
tosGPS = "tostools.tosGPS:main"
tos = "tostools.tos:main"
json2ascii = "tostools.json2ascii:main"
metadata2rmq = "tostools.metadata2rmq:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings  
    "F", # pyflakes
    "I", # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

